# ramboll-keel-idp

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  Tracker.md  architecture.md
.claude/: launch.json
.github/: README.md
.github/actions/: README.md
.github/actions/setup-python-env/: action.yml
.github/actions/test/dotnet/: action.yml
.github/actions/test/go/: action.yml
.github/actions/test/node/: action.yml
.github/actions/test/python/: action.yml
.github/actions/test/terraform/: action.yml
.github/actions/validate/dotnet/: action.yml
.github/scripts/: check_branch_name.py
.github/workflows/: ci.yml  reusable-build.yml  reusable-test.yml  reusable-validate.yml
Ramble IDP Hub MVP Design/: .thumbnail  Ramboll Developer Hub.dc.html  diagram-engine.js  docs-data.js
Ramble IDP Hub MVP Design/notes/: idp-text.txt
Ramble IDP Hub MVP Design/uploads/AI-assisted-coding-library-master/: README.md
Ramble IDP Hub MVP Design/uploads/preview/: _card.css  badges.html  buttons.html  cards.html  colors-primary.html  colors-secondary.html  colors-spot.html  form-fields.html  icons.html  logo.html  nav.html  radius.html  scale-cyan.html  scale-darks.html  scale-lights.html  scale-ocean.html  semantic-shapes.html  shadow.html  spacing.html  type-body.html  type-display.html  type-weights.html
blueprints/: README.md
blueprints/monolith-root/: blueprint.yaml
blueprints/monolith-root/template/: .editorconfig  .gitignore  AGENTS.md.j2  CLAUDE.md.j2  CODEOWNERS.j2  CONTRIBUTING.md.j2  LICENSE  README.md.j2  SECURITY.md  pyproject.toml
blueprints/monolith-root/template/.claude/skills/monorepo-selective-ci/: SKILL.md
blueprints/monolith-root/template/.github/scripts/: detect_services.py
blueprints/monolith-root/template/.github/workflows/: ci.yml
blueprints/monolith-root/template/docs/: ci.md  index.md.j2
blueprints/monolith-root/template/tests/: test_detect_services.py
blueprints/python-service/: blueprint.yaml
blueprints/python-service/template/: .gitignore  AGENTS.md.j2  CLAUDE.md.j2  CODEOWNERS.j2  CONTRIBUTING.md.j2  README.md.j2  architecture.md.j2  mkdocs.yml.j2  pyproject.toml.j2
blueprints/services/api-dotnet/: blueprint.yaml
blueprints/services/api-node/: blueprint.yaml
blueprints/services/api-python/: blueprint.yaml
blueprints/services/dp-python/: blueprint.yaml
blueprints/services/fe-react/: blueprint.yaml
blueprints/services/inf-terraform/: blueprint.yaml
blueprints/services/wk-go/: blueprint.yaml
blueprints/services/wk-python/: blueprint.yaml
crates/keel-api/: Cargo.toml
crates/keel-api/src/: additions.rs  dto.rs  lib.rs  main.rs  overview.rs  routes.rs  state.rs
crates/keel-blueprint/: Cargo.toml
crates/keel-blueprint/src/: context.rs  lib.rs  manifest.rs  renderer.rs
crates/keel-blueprint/tests/: api_python.rs  python_service.rs
crates/keel-cli/: Cargo.toml
crates/keel-cli/src/: lib.rs  main.rs
crates/keel-core/: Cargo.toml
crates/keel-core/src/: catalog.rs  lib.rs  service.rs
crates/keel-engine/: Cargo.toml
crates/keel-engine/src/: catalog.rs  lib.rs  workflow.rs
crates/keel-engine/src/workflow/: add_service.rs  legacy.rs  mono.rs  multi.rs
crates/keel-engine/tests/: add_service.rs  initialize.proptest-regressions  initialize.rs  v3.rs
crates/keel-engine/tests/fixtures/fixture-service/: blueprint.yaml
crates/keel-engine/tests/fixtures/fixture-service/template/: CODEOWNERS.j2  README.md.j2  ci.yml
crates/keel-engine/tests/fixtures/monolith-root/: blueprint.yaml
crates/keel-engine/tests/fixtures/monolith-root/template/: CODEOWNERS.j2  README.md.j2
crates/keel-engine/tests/fixtures/monolith-root/template/.github/workflows/: ci.yml
crates/keel-engine/tests/fixtures/monolith-root/template/docs/: index.md.j2
crates/keel-engine/tests/fixtures/services/api-python/: blueprint.yaml
crates/keel-engine/tests/fixtures/services/api-python/template/: CODEOWNERS.j2  LICENSE  README.md.j2
crates/keel-engine/tests/fixtures/services/api-python/template/.github/workflows/: ci.yml
crates/keel-engine/tests/fixtures/services/api-python/template/src/{{ package_name }}/: main.py.j2
crates/keel-engine/tests/fixtures/services/fe-react/: blueprint.yaml
crates/keel-engine/tests/fixtures/services/fe-react/template/: CONTRIBUTING.md  README.md.j2  SECURITY.md  package.json.j2
crates/keel-engine/tests/fixtures/services/fe-react/template/.github/workflows/: ci.yml
crates/keel-github/: Cargo.toml
crates/keel-github/src/: cmd.rs  gh.rs  lib.rs  local.rs  octocrab_provider.rs
crates/keel-github/tests/: gh_integration.rs  octocrab_integration.rs
docs/: architecture.md  blueprints.md  getting-started.md  governance.md  index.md  roadmap.md
fixtures/: mock-data.json
hub/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
hub/src/: router.tsx
hub/src/components/: AppFooter.tsx  AppHeader.tsx  ProgressView.test.ts  ProgressView.tsx  StepBar.tsx  Wizard.test.tsx  Wizard.tsx
hub/src/design/: global.css  icons.tsx  tokens.test.ts  tokens.ts
hub/src/hooks/: useAsync.ts  useClock.test.ts  useClock.ts  useSession.ts
hub/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  diagram-engine.test.ts  diagram-engine.ts  docs-data.ts  hub-data.test.ts  hub-data.ts  payload.test.ts  payload.ts  time.test.ts  time.ts  types.ts  validation.test.ts  validation.ts  wizard-model.test.ts  wizard-model.ts  wizard.test.ts  wizard.ts
hub/src/routes/: __root.tsx  index.test.ts  index.tsx  knowledge.$docId.tsx  knowledge.tsx  login.tsx  new.tsx  projects.$projectId.tsx  projects.tsx
hub/src/styles/: tokens.css
hub/src/test/: fixtures.ts
tracker/: README.md  api-rs.md  apicli-v3.md  blueprint-py.md  blueprint-rs.md  blueprints-v3.md  branch-flow.md  ci.md  dashboard-add-service.md  docs.md  engine-rs.md  engine-v3.md  github-rs.md  goal-dynamic-ci.md  hub-v3.md  hub.md  monoci-v3.md  named-services-rs.md  overview-api.md  project-page.md  ui-foundation.md  ui-homeprojects.md  ui-kb.md  ui-shell.md  ui-wizard.md  wizard-naming.md
(+197 files in other folders)
