[workspace]
resolver = "2"
members = [
    "crates/keel-core",
    "crates/keel-blueprint",
    "crates/keel-github",
    "crates/keel-engine",
    "crates/keel-api",
    "crates/keel-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Proprietary"
authors = ["Ramboll Developer Platform <rdp@ramboll.com>"]
repository = "https://github.com/Alex793x/keel"

[workspace.dependencies]
# Shared third-party deps — pinned once, inherited by every crate.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
minijinja = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
tempfile = "3"
octocrab = "0.53"
base64 = "0.22"

# Internal crates
keel-core = { path = "crates/keel-core" }
keel-blueprint = { path = "crates/keel-blueprint" }
keel-github = { path = "crates/keel-github" }
keel-engine = { path = "crates/keel-engine" }

[profile.release]
strip = true
lto = "thin"
