[package]
name = "keel-blueprint"
description = "Blueprint manifest loading/validation and MiniJinja rendering of the template tree."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
keel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
