[package]
name = "keel-github"
description = "RepoProvider implementations: GhCliProvider (real, via gh + git) and FakeProvider (tests)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
keel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
