[package]
name = "keel-github"
description = "RepoProvider implementations: OctocrabProvider (typed SDK), GhCliProvider (gh + git), LocalDirProvider, FakeProvider."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
keel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Used by GhCliProvider (staging dir for `gh repo create --source`) and LocalDirProvider tests.
tempfile = { workspace = true }
# OctocrabProvider: typed GitHub SDK + a runtime to bridge its async API behind the sync trait.
octocrab = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
