# Root gate toolchain — powers the ALWAYS-on `gate` CI job: the resolver
# property tests under tests/ prove the selective-CI pipeline logic on every
# push, so the monolith is green from birth. Service toolchains live under
# services/<dir>/ and are exercised only when affected (see docs/ci.md).

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monolith-gate"
version = "0.1.0"
description = "Root CI gate: property tests for the change-aware service resolver."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Ramboll-Internal" }
dependencies = []

[project.optional-dependencies]
# Local development + CI gate toolchain.
dev = [
  "pytest>=8.0",
  "hypothesis>=6.100",
]

[tool.setuptools]
# The root is a gate, not a package — the resolver is a script under
# .github/scripts/ that the tests import by path.
packages = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
